# gbcback

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
gbcback/: cli.py
gbcback/anki/: packer.py  parser.py  reader.py  unpacker.py  verifier.py
gbcback/anki/proto/: anki.proto  anki_pb2.py
tests/: test_placeholder.py
